--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.7'
 
 services:
-  api:
+  back:
     build: back/application
     ports:
       - 8080:8080
@@ -11,3 +11,10 @@ services:
       SPRING_DATASOURCE_URL: jdbc:${DB_SYSTEM}://${DB_SERVER}:${DB_PORT}/${DB_SCHEMA}
       SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
+
+  front:
+    build: front
+    ports:
+      - 9000:80
+    links:
+      - back
